# goblintools

./: .gitignore  READEME.md  README.md  pyproject.toml  requirements.txt  run_local_test.py  setup.py  test_ocr_metadata.py
goblintools/: __init__.py  file_handling.py  log_policy.py  ocr_parser.py  parser.py  pypdf_workarounds.py  retry.py  text_cleaner.py
scripts/: dev_extract_nested.py
tests/: conftest.py  test_config.py  test_file_handling.py  test_log_policy.py  test_ocr_parser.py  test_parser.py  test_text_cleaner.py
