[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goblintools"
version = "0.7.7"
description = "Toolkit for archive extraction, OCR parsing, and file text extraction"
authors = [{ name="Gean Matos", email="gean@webgoal.com.br" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "patool",
    "rarfile",
    "boto3",
    "opencv-python-headless",
    "numpy",
    "pdf2image",
    "pypdf>=6.10.2",
    "beautifulsoup4",
    "striprtf",
    "dbfread",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "xlrd",
    "odfpy",
    "unidecode",
    "pytesseract",
    "scipy",
    "pillow"

]

[project.urls]
Homepage = "https://github.com/geanatelie/goblintools.git"
Repository = "https://github.com/geanatelie/goblintools.git"
